--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,97 @@
+/**
+Palette: https://scrimba.com/links/hometown-palette
+RED: #E63946
+LIGHT: #F1FAEE
+AQUA: #A8DADC
+LIGHT BLUE: #457B9D
+DARK BLUE: #1D3557
+
+*/
+
 body {
-    margin: 20px;
-    /*
-    Challenge:
-    Find a web safe font you like, and add it 
-    to your card.
-    */
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 0;
+    text-align: center;
+}
+
+img {
+    width: 100px;
+}
+
+h1, h2, h3, h4 {
+    margin: 0 auto;
+}
+
+#hero {
+background-image: URL("images/Torshov.JPG");
+background-size: cover;
+width: 100%;
+height: 350px;
+}
+
+.title-visit {
+    background-color: #1D3557;
+    color: #FFF;
+    border-radius: 10px;
+    width: 225px;
+  margin-bottom: 10px;
+}
+.title-descr {
+background-color:  #457B9D;
+color: #FFF;
+width: 450px;
+border-radius: 10px;
+/* margin: 0 auto; */
+}
+
+ .title-position {
+    display: flex;
+    height: 350px;
+    flex-direction: column;
+    justify-content: center;
+ }
+
+ #activities {
+    height: 380px;
+    background-color: #F1FAEE;
+ }
+ .activities-title {
+    padding: 20px 0 20px 20px;
+ }
+
+ #activities-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+ }
+
+ .activities-col {
+  height: 100px;
+  border-radius: 50%;
+  margin-top: 30px;
+
+ }
+
+ .columns {
+    width: 150px;
+ }
+
+ #guide {
+    width: 400px;
+    background-color: #A8DADC;
+    box-shadow: 0 6px 0 #1D3557;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    margin: 50px auto;
+    text-align: center;
+ }
+
+ .avatar {
+    width: 150px;
+    height: 260px;
+    padding: 20px;
 }
 
 .text-col {
-    margin-top: 35px;
+    padding: 40px;
 }
-
-.text-col:hover {
-    font-size: 2rem;
-    color: white;
-}
-.avatar {
-    width: 150px;
-    height: 267px;    
-    
-}
-
-.card {
-    width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex;
-    justify-content: space-around;
-    text-align: center;
-    background: #ff0054;
-    color: #2b2839;
-    border-bottom: 6px solid #0466c8;
-    font-size: 1.1em;
-    border-radius: 20px;
-        
-    /*
-    Challenge:
-    Find a color palette you like on Coolors.co
-    and use it in your business card.
-     */
-}
-
-.border-blue {
-    border: 1px dotted blue;
-}
-
-/*
-Stretch goals:
-Find other ways you can personalize 
-the design of your business card, e.g.:
-- change the border(s)
-- add border radius
-- shuffle the layout
-- shadows        🤯
-- hover effects  🤯🤯
-- animations     🤯🤯🤯
-*/
-
-/*
-Final challenge:
-Download the code to your local computer and place it
-in a folder called "business-card"
-*/
